FIX: do not render draggable icon on mobile

--- a/app/assets/stylesheets/mobile/sidebar.scss
+++ b/app/assets/stylesheets/mobile/sidebar.scss
@@ -1,9 +1,6 @@
 .sidebar-section-form-modal {
   .row-wrapper {
     grid-template-columns: 4.5em repeat(2, 1fr) 2em;
-    .draggable {
-      display: none;
-    }
     .link-icon {
       grid-column: 1;
     }
